--- a/example-8/index.html
+++ b/example-8/index.html
@@ -6,14 +6,15 @@
       height="84"
       alt="Tortoise Original" />
     <img id="imageOutput" src="" alt="Test Image" />
+    <div id="outputTextElement"></div>
     <script>
       const imageOutputElement = document.getElementById("imageOutput");
 
-      fetch("https://www.example.org")
+      fetch("../media/test.txt")
         .then((response) => response.body)
         .then((rb) => {
           const reader = rb.getReader();
-
+          // with fetch response body get a reader and manually create a ReadableStream to enqueue the values of the reader
           return new ReadableStream({
             start(controller) {
               // The following function handles each data chunk
@@ -46,6 +47,7 @@
         )
         .then((result) => {
           // Do things with result
+          document.querySelector("#outputTextElement").textContent += result;
           console.log(result);
         });
     </script>
